<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageTopBanner"
        android:layout_width="0dp"
        android:layout_height="118dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/Placeholder"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgroundtest" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonUpload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonDiscard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/buttonDiscard"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonUpload"
        app:layout_constraintEnd_toStartOf="@+id/buttonUpload" />

    <TextView
        android:id="@+id/labelCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/Camera"
        app:layout_constraintBaseline_toBaselineOf="@+id/textCameraType"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/Settings"
        app:layout_constraintBaseline_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textCameraSettings"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintBaseline_creator="0"
        tools:layout_constraintLeft_creator="0" />

    <EditText
        android:id="@+id/textCameraType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/CameraValue"
        app:layout_constraintBottom_toTopOf="@+id/textCameraSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/labelCamera"
        app:layout_constraintTop_toBottomOf="@+id/imageTopBanner"
        app:layout_constraintVertical_bias="0.16000003"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/textCameraSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/CameraSettings"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpload"
        app:layout_constraintEnd_toEndOf="@+id/textCameraType"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textCameraType"
        app:layout_constraintTop_toBottomOf="@+id/textCameraType" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTopBanner" />

</android.support.constraint.ConstraintLayout>